Fix mobile chat on firefox

--- a/src/routes/game/components/elements/chatBox/ChatBox.module.css
+++ b/src/routes/game/components/elements/chatBox/ChatBox.module.css
@@ -67,9 +67,10 @@
 }
 
 .chatBoxMobileContainer {
+  width: 100%;
+  width: 30vw;
   padding-top: 1dvh;
   position: relative;
-  width: 100%;
   flex-grow: 1;
   flex-basis: 100%;
   display: flex;
