--- a/src/routes/game/components/elements/chatInput/ChatInput.module.css
+++ b/src/routes/game/components/elements/chatInput/ChatInput.module.css
@@ -45,6 +45,7 @@
   padding: 0.3em;
   margin: 0;
   margin-top: 0.1rem;
+  border: 1px solid black;
 }
 
 .quickChatButton button:hover {
